force-app/main/default/objects/Test_Object__c/fields/Test_Currency__c.field-meta.xml
<CustomField>
    <fullName>Test_Currency__c</fullName>
    <label>Test Currency</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>