force-app/main/default/objects/Test_Object__c/fields/Test_Datetime__c.field-meta.xml
<CustomField>
    <fullName>Test_Datetime__c</fullName>
    <label>Test Datetime</label>
    <type>DateTime</type>
</CustomField>