force-app/main/default/objects/Test_Object__c/fields/Test_Geolocation__c.field-meta.xml
<CustomField>
    <fullName>Test_Geolocation__c</fullName>
    <label>Test Geolocation</label>
    <scale>1</scale>
    <type>Location</type>
</CustomField>