force-app/main/default/objects/Test_Object__c/fields/Test_Long_Text_Area__c.field-meta.xml
<CustomField>
    <fullName>Test_Long_Text_Area__c</fullName>
    <label>Test Long Text Area</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>