force-app/main/default/objects/Test_Object__c/fields/Test_Percent__c.field-meta.xml
<CustomField>
    <fullName>Test_Percent__c</fullName>
    <label>Test Percent</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>