force-app/main/default/objects/Test_Object__c/fields/Test_Phone__c.field-meta.xml
<CustomField>
    <fullName>Test_Phone__c</fullName>
    <label>Test Phone</label>
    <type>Phone</type>
</CustomField>