force-app/main/default/objects/Test_Object__c/fields/Test_Picklist__c.field-meta.xml
<CustomField>
    <fullName>Test_Picklist__c</fullName>
    <label>Test Picklist</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>a</fullName>
            </value>
            <value>
                <fullName>b</fullName>
            </value>
            <value>
                <fullName>c</fullName>
            </value>
            <value>
                <fullName>d</fullName>
            </value>
            <value>
                <fullName>e</fullName>
            </value>
            <value>
                <fullName>f</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>