force-app/main/default/objects/Test_Object__c/fields/Test_Rich_Text_Area__c.field-meta.xml
<CustomField>
    <fullName>Test_Rich_Text_Area__c</fullName>
    <label>Test Rich Text Area</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>