force-app/main/default/objects/Test_Object__c/fields/Test_Text_Encrypted__c.field-meta.xml
<CustomField>
    <fullName>Test_Text_Encrypted__c</fullName>
    <label>Test Text Encrypted</label>
    <length>175</length>
    <maskChar>asterisk</maskChar>
    <maskType>all</maskType>
    <type>EncryptedText</type>
</CustomField>