force-app/main/default/objects/Test_Object__c/fields/Test_Time__c.field-meta.xml
<CustomField>
    <fullName>Test_Time__c</fullName>
    <label>Test Time</label>
    <type>Time</type>
</CustomField>