force-app/main/default/objects/Test_Object__c/fields/Test_Url__c.field-meta.xml
<CustomField>
    <fullName>Test_Url__c</fullName>
    <label>Test Url</label>
    <type>Url</type>
</CustomField>